Se agrega las paginas de mas recetas e imagenes

--- a/recipes/ChiliDogMacandCheese.html
+++ b/recipes/ChiliDogMacandCheese.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Chili Dog Mac and Cheese</h1>
 
+    <ul>
+        <li><a href="../index.html">Back</a></li>
+    </ul>
+
     <img src="../images/Chili-Dog-Mac-and-Cheese.webp" alt="Chili Dog Mac and Cheese">
 
     <h2>Description</h2>
@@ -17,7 +21,31 @@
     </p>
 
     <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>1 pound ground beef</li>
+        <li>1 large onion, diced</li>
+        <li>2 generous teaspoons kosher salt, plus more to taste</li>
+        <li>3 tablespoons chili powder</li>
+    </ul>
 
     <h2>Steps</h2>
+    <ol>
+        <li>
+            Add olive oil to a large pot and place over high heat. Add beef; cook and stir, breaking up with a spoon or spatula, about 2 minutes. Add onions and salt, and cook, stirring, until beef is crumbly, and onions turn translucent, about 5 minutes.
+        </li>
+        <li>
+            Add the chili powder, cumin, paprika, black pepper, cinnamon, cayenne, dried oregano, and garlic. Cook, stirring, for about 2 minutes.
+        </li>
+        <li>
+            Add peppers, sliced hot dogs, crushed tomatoes, and water. Stir together; bring the mixture to a simmer. Reduce heat to medium-low and simmer, stirring occasionally, until cooked to your taste, at least 30 minutes. Taste and adjust seasoning.
+        </li>
+        <li>
+            Once chili is nearly ready, fill a large pot with lightly salted water and bring to a rolling boil. Stir in macaroni and return to a boil. Cook pasta uncovered, stirring occasionally, 1 minute less than specified in package directions, until not quite tender, and still firm to the bite, about 8 to 11 minutes.
+        </li>
+        <li>
+            Meanwhile, preheat the oven to 400 degrees F (200 degrees C).
+        </li>
+    </ol>
 </body>
 </html>
