--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ChiliDogMacandCheese.html">Chili Dog Mac and Cheese</a>
+
+    <ul>
+        <li>
+            <a href="recipes/ChiliDogMacandCheese.html">Chili Dog Mac and Cheese</a>
+        </li>
+        <li>
+            <a href="recipes/pestochikenpennecasserole.html">Pesto Chicken Penne Casserole</a>
+        </li>
+        <li>
+            <a href="recipes/hampotatoandbroccolicasserole.html">Ham, Potato and Broccoli Casserole</a>
+        </li>
+    </ul>
 </body>
 </html>
